--- a/public/index.html
+++ b/public/index.html
@@ -491,10 +491,47 @@
       </div>
   </section>
   <footer style="text-align:center; padding:20px; background-color:black; color:white">
-    <p>&copy; 2024 Future Compiler. All rights reserved.</p>
-    <p><a href="/privacy-policy" style="text-decoration:none; color:white">Privacy Policy</a> | 
-       <a href="/terms-of-service" style="text-decoration:none; color:white">Terms of Service</a></p>
-</footer>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-4 col-6">
+          <h3 class="text-primary text-start fw-bold">Future Compilers</h3>
+          <div >
+            <p style="text-align: start;" class="fs-5 w-75">pEmpowering students with cutting-edge software training and career guidance.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-6">
+          <div class="text-start">
+            <h3 class="text-primary fw-bold">Quick Links</h3>
+          </div>
+          <div>
+            <ul style="text-align: start;">
+                <li class="text-light list-unstyled "> <a href="#homepage" class="text-light"> Home</a></li>
+                <li class="text-light list-unstyled "> <a href="#aboutus" class="text-light"> About</a></li>
+                <li class="text-light list-unstyled "> <a href="#services" class="text-light"> Services</a></li>
+                <li class="text-light list-unstyled "> <a href="#team" class="text-light"> Team</a></li>
+                <li class="text-light list-unstyled "> <a href="#contact" class="text-light"> Contact</a></li>
+            </ul>
+          </div>
+          <div>
+
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-6">
+          <div>
+            <h3 class="text-primary fw-bold">Contact info</h3>
+          </div>
+          <div>
+            <ul class="text-start">
+              <li class="list-unstyled">Email: futurecompilersinfo@.com</li>
+              <li class="list-unstyled">Phone: +91 7659041456</li>
+              <li class="list-unstyled">Address:hari hara putra bhavan,near kanchi kamakshi kalyana mandapam,KPHB,road no 3,Phase - 1,Hyderabad, Telanagana</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   
     
